--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <style>
     html, body {
       margin: 0;
-      height: 100%;
     }
 
     body {
@@ -15,16 +14,15 @@
     }
 
     .image-section {
-      min-height: 100vh;
       display: flex;
       justify-content: center;
-      align-items: center;
     }
 
     img.full {
       width: 70vw;
       height: auto;
       display: block;
+      margin: 0 auto;
     }
   </style>
 </head>
@@ -32,26 +30,22 @@
 
   <div class="image-section">
     <img class="full"
-      src="https://raw.githubusercontent.com/nthduct/valzza/main/portfolio_intro.png"
-      alt="portfolio image" />
+      src="https://raw.githubusercontent.com/nthduct/valzza/main/portfolio_intro.png" />
   </div>
 
   <div class="image-section">
     <img class="full"
-      src="https://raw.githubusercontent.com/nthduct/valzza/main/walkmining_portfolio_v1.png"
-      alt="portfolio image" />
+      src="https://raw.githubusercontent.com/nthduct/valzza/main/walkmining_portfolio_v1.png" />
   </div>
 
   <div class="image-section">
     <img class="full"
-      src="https://raw.githubusercontent.com/nthduct/valzza/main/cashdoc_portfolio_v1.png"
-      alt="portfolio image" />
+      src="https://raw.githubusercontent.com/nthduct/valzza/main/cashdoc_portfolio_v1.png" />
   </div>
 
   <div class="image-section">
     <img class="full"
-      src="https://raw.githubusercontent.com/nthduct/valzza/main/cashwalk_portfolio_v1.png"
-      alt="portfolio image" />
+      src="https://raw.githubusercontent.com/nthduct/valzza/main/cashwalk_portfolio_v1.png" />
   </div>
 
 </body>
